# eyalthesinger

./: .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  make_submission  pyproject.toml
.github/workflows/: build.yml
bench/: run.py
code/crackers/: utilities.c  utilities.h  wpa.c
code/ctf/: ctfd_server.txt
code/ctf/2_sha256_1/: dictionary_attack.c  password_hash.txt  sha256.c
code/ctf/3_sha256_2/: password_hash.txt
code/ctf/4_wpa2_1/: capture.pcap
code/ctf/6_wpa2_3/: capture.pcap  partial_rock_you.txt
code/ctf/7_wpa2_4/: capture.pcap
code/src/eyalthesinger/: __main__.py  format.py  (+3 more)
crackers/: hmac.c  hmac.h  main.c  main.cu  pbkdf2.c  sha1.c  sha1.h  sha256.c  sha256.h  utilities.h  wpa.c  wpa.h
crackers/test/: config.h  sha256.cuh
ctf/: WPA2 cracking CTF.pptx
ctf/2_sha256_1/: dictionary_attack.c  sha256.h
ctf/3_sha256_2/: brute_force.c
ctf/4_wpa2_1/: four_way_hanshake.pcap
ctf/5_wap2_2/: pass_to_mic.c
ctf/5_wpa2_2/: capture.pcap  pass_to_mic.c  pbkdf2.h  sha1.h  wpa.h
ctf/6_wpa2_3/: capture.pcap  capture_experienced.pcap
ctf/7_wpa2_4/: capture.pcap  capture_experienced.pcap
ctf/9_fast_wpa2/: client  encrypt_flag.c  example_client.c  server  shortened_rockyou.txt
data/: capture.pcap  capture2.pcap
demo/: brute_force  calc_mic  pbkdf2.c  wpa.h
guide/: CTF Instructions.docx  WPA Cracking CTF.pptx
report/: report.tex  report.typ
scripts/: generate_pcap.py  generate_pcap2.py
src/eyalthesinger/: __init__.py  connect.py  crack.py  download.py  format.py  server.py  utilities.py
tests/: crypto_tester.c
tests/test/: main.cu
(+36 files in other folders)
