[project]
name = "eyalthesinger"
version = "0.1.0"
description = "An extensible password brute-force program"
dependencies = [
    "click>=8.1.7",
    "tqdm>=4.66.4",
    "halo>=0.0.31",
    "scapy==2.6.0rc1",
    "cryptography>=42.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"eyalthesinger" = "eyalthesinger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eyalthesinger"]
